[gd_scene load_steps=10 format=2]

[ext_resource path="res://nodes/monsters/Greed.gd" type="Script" id=1]
[ext_resource path="res://gfx/monsters.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.60801
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 176.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 48, 176, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Greed" type="KinematicBody2D" groups=[
"monster",
]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectRadius" type="Area2D" parent="."]
visible = false

[node name="Collisionshape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 2 )

[node name="FireDetectRadius" type="Area2D" parent="."]
visible = false

[node name="Collisionshape2D" type="CollisionShape2D" parent="FireDetectRadius"]
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -8.0
margin_top = -16.0
margin_right = 8.0
margin_bottom = 16.0
color = Color( 0.913725, 0.921569, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
frame = 3
playing = true

[connection signal="area_entered" from="DetectRadius" to="." method="_on_DetectRadius_area_entered"]
[connection signal="area_exited" from="DetectRadius" to="." method="_on_DetectRadius_area_exited"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="area_entered" from="FireDetectRadius" to="." method="_on_DetectRadius_area_entered"]
[connection signal="area_exited" from="FireDetectRadius" to="." method="_on_DetectRadius_area_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
